--- a/main/main.html
+++ b/main/main.html
@@ -87,26 +87,26 @@
 
 <div class="w3-quarter">
   <img src="/w3images/avatar.jpg" alt="Boss" style="width:45%" class="w3-circle w3-hover-opacity">
-  <h3>Johnny Walker</h3>
-  <p>Web Designer</p>
+  <h3>Pranav Kallavi</h3>
+  <p>President</p>
 </div>
 
 <div class="w3-quarter">
   <img src="/w3images/avatar.jpg" alt="Boss" style="width:45%" class="w3-circle w3-hover-opacity">
-  <h3>Rebecca Flex</h3>
-  <p>Support</p>
+  <h3>Karthik Palled</h3>
+  <p>VP of Technology</p>
 </div>
 
 <div class="w3-quarter">
   <img src="/w3images/avatar.jpg" alt="Boss" style="width:45%" class="w3-circle w3-hover-opacity">
-  <h3>Jan Ringo</h3>
-  <p>Boss man</p>
+  <h3>Kabinale Swaroop Hebbar</h3>
+  <p>Vice President</p>
 </div>
 
 <div class="w3-quarter">
   <img src="/w3images/avatar.jpg" alt="Boss" style="width:45%" class="w3-circle w3-hover-opacity">
-  <h3>Kai Ringo</h3>
-  <p>Fixer</p>
+  <h3>Krish Chatterjee </h3>
+  <p>Dalit</p>
 </div>
 
 </div>
